# recon

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  ISSUE_TEMPLATE.md  MAINTAINERS.md  MAINTENANCE_PLAN.md  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_NOTES.md  ROADMAP.md  ROADMAP_V4.md  SECURITY.md  SETUP.md  USAGE.md  alembic.ini  audit.py  baseline-ruff.txt  baseline-tests.txt  build.py  cleanup_script.py  config.yaml  dependency_tree.txt  docker-compose.yml  empty_dirs_moved.txt  empty_files_moved.txt  feature_matrix.json  fix.py  generate_audit.py  generate_docs.py  generate_examples.py  generate_plugin_docs.py  generate_stage10.py  generate_stage11.py  generate_stage12.py  (+25 more)
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md  feature_request.md  plugin_request.md  security_issue.md  security_report.md
.github/workflows/: ci.yml  python-tests.yml  reconx-ci.yml  release.yml  tests.yml
api/: asm_routes.py  graph_routes.py  main.py  plugin_routes.py  websocket.py
api/routes/: assets.py  auth.py  findings.py  projects.py  reports.py  scans.py
archive/: build_migration_tracker.py  build_stage3.py  generate_stage2_docs.py  refactor_plugins.py  update_type.py
archive/deprecated/: audit_plugins.py  create_adapters.py  create_engine_reporting.py  create_tests.py  fix_category1.py  fix_imports.py  fix_imports_all.py  fix_timezone.py  fix_utcnow.py  gen_audits.py  generate_integration_reports.py  generate_v211_coverage.py  generate_v211_deadcode.py  generate_v211_reports.py  normalize_plugins.py  patch_reconx.py  refactor_core.py  refactor_exceptions.py  rename_plugin_loader.py  run_doctor.py  smoke_test.py  stage2_recovery.py  stage3_classification.py  stage4_validation.py  stage5_validation.py  stage6_validation.py  stage7_validation.py  test_scan.py  verify_workflow.py
archive/legacy_tests/: test_acquifinder.py  test_active_ip.py  test_async_engine.py  test_bigbountyrecon.py  test_breach_check.py  test_bug_bounty_agents.py  test_cli.py  test_csprecon.py  test_cyberdeck.py  test_deksterecon.py  test_dependencies.py  test_dummy.py  test_enterprise.py  test_golden_workflow.py  test_httpx.py  test_metatron.py  test_plugins.py  test_resilience.py  test_s3cxsser.py  test_scalability.py  test_subfinder.py
archive/placeholders/: adapter.py  (+1 more)
archive/repos/original_repositories/portwave-main/: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
archive/repos/original_repositories/portwave-main/.github/workflows/: release.yml
archive/repos/original_repositories/portwave-main/docs/: CODEMAP.md
archive/repos/original_repositories/portwave-main/ports/: cdn-ranges.txt  portwave-top-ports.txt
archive/repos/original_repositories/portwave-main/src/: domain.rs  main.rs  ssl_scan.rs  wildcard.rs
audit/: STAGE0_AUDIT_REPORT.md  STAGE10_COMPLETION_REPORT.md  STAGE11_COMPLETION_REPORT.md  STAGE12_COMPLETION_REPORT.md  STAGE1_COMPLETION_REPORT.md  STAGE2_COMPLETION_REPORT.md  STAGE2_GAP_ANALYSIS.md  STAGE3_COMPLETION_REPORT.md  STAGE4_COMPLETION_REPORT.md  STAGE5_COMPLETION_REPORT.md  STAGE6_COMPLETION_REPORT.md  STAGE7_COMPLETION_REPORT.md  STAGE8_COMPLETION_REPORT.md  STAGE9_COMPLETION_REPORT.md  ai_performance_report.md  annual_review_template.md  api_report.md  architecture_placement.csv  architecture_report.md  archive_candidates.csv  asset_inventory.csv  asset_lifecycle_report.md  attack_surface_report.md  audit_logging_report.md  backup_recovery_report.md  benchmark_report.md  breach_intelligence_report.md  cache_report.md  capability_coverage_report.md  capability_map.csv  capability_matrix.csv  cli_validation.md  code_quality_report.md  compatibility_report.md  config_inventory.csv  content_discovery_report.md  continuous_security_report.md  core_health_report.md  correlation_engine_report.md  crlfi_integration_report.md  (+87 more)
benchmarks/: test_plugin_discovery.py
cli/: dashboard.py  doctor.py  main.py  scan.py  workflow.py
config/: development.yaml  production.yaml  staging.yaml  testing.yaml
core/: ai_engine.py  database.py  engagement.py  event_bus.py  evidence_manager.py  orchestrator.py  paths.py  platform_adapter.py  plugin_registry.py  queue.py  result_store.py  subprocess_runner.py  tool_manager.py  url_normalizer.py  workflow_engine.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTINUOUS_IMPROVEMENT.md  DEVELOPER_GUIDE.md  KNOWLEDGE_BASE_INDEX.md  OPERATIONS_GUIDE.md  PLUGIN_CERTIFICATION.md  PLUGIN_SDK_GUIDE.md  RECOVERY_GUIDE.md  REPOSITORY_STRUCTURE.md  SETUP_STAGE_14.txt  SETUP_STAGE_20.md  TELEMETRY_POLICY.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  api.md  canonical_map.md  capabilities.md  configuration.md  dashboard.md  dependencies.md  development.md  duplicate_matrix.md  health_monitoring.md  index.md  installation.md  module_inventory.md  module_map.md  observability.md  plugin_map.md  plugins.md  repository_inventory.md  roadmap.md  workflows.md
examples/: custom_plugin_template.py  passive_recon.yaml  sample_asset.json  sample_plugin.py  sample_report.json
governance/: architecture_principles.md  decision_process.md  governance.md  release_policy.md
logs/: audit.jsonl
migrations/: env.py
reconx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
registry/: plugin_registry.yaml
release/: CHANGELOG.md  LICENSE.md  README.md  SBOM.json  installation-guide.md
reports/: assets.csv  report.json
roadmap/: v2.2.md  v3.0.md
rules/: dns_rules.yaml
scripts/: install.ps1  install.sh  release.py
sdk/: plugin_base.py
site/: 404.html  index.html
tests/: conftest.py  test_ai_engine.py  test_api.py  test_database.py  test_meta_brain.py  test_plugin_metadata.py  test_plugins.py  test_timeline.py  test_workflows.py
tools/: audit_plugins.py  dependency_validator.py
upgrade/: compatibility_matrix.md  upgrade_policy.md
workflows/: basic.yaml  deep_scan.yaml  medium.yaml  webassess.yaml
(+19150 files in other folders)
