[package]
name = "portwave"
version = "0.18.8"
edition = "2021"
description = "Ultra-fast, IP-focused IPv4/IPv6 port scanner with adaptive concurrency, banner grab, TLS sniff, CDN tagging, scan-diff, webhook, self-update, and a built-in httpx + nuclei recon pipeline."
license = "MIT"
repository = "https://github.com/assassin-marcos/portwave"
homepage = "https://github.com/assassin-marcos/portwave"
documentation = "https://github.com/assassin-marcos/portwave#readme"
readme = "README.md"
keywords = ["port-scanner", "network-scanner", "security", "recon", "bugbounty"]
categories = ["command-line-utilities", "network-programming"]
authors = ["assassin-marcos"]
rust-version = "1.75"
# Ship all artefacts crates.io needs, exclude build outputs + temp dirs
# that would bloat the uploaded .crate file.
include = [
    "src/**/*",
    "ports/*.txt",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[[bin]]
name = "portwave"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ipnetwork = "0.20"
anyhow = "1.0"
indicatif = "0.17"
flume = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Self-update: downloads prebuilt binaries from GitHub Releases for the host
# platform (Linux x86_64, macOS x86_64/aarch64, Windows x86_64).
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
# Tiny blocking HTTP client for the GitHub tags API peek — catches the
# "tag pushed, release not yet built" race in `--check-update`.
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
# reqwest drives the Pass-C native HTTP(S) enrichment that replaced the
# old httpx subprocess. Two non-negotiable reasons for this specific dep:
#   1. HTTP/2 via ALPN — ureq 2.x is HTTP/1.1 only, so HTTPS servers
#      that negotiate only H2 would silently fail to enrich. reqwest
#      does H1/H2 transparently.
#   2. native-tls-vendored (bundled OpenSSL) — rustls is strict about
#      X.509 DER parsing; legacy Cisco / IoT gear occasionally emits
#      certs with negative serial numbers or non-RFC-5280 quirks that
#      rustls rejects before our custom verifier can even see them.
#      OpenSSL is historically more lenient — same behavior httpx's
#      `-ztls` flag gives via zcrypto.
#   `vendored` = static-link OpenSSL into the release binary so users
#   don't need libssl installed on their scan hosts.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls-vendored", "gzip"] }
# Fast non-DoS-resistant hasher for scan-state HashSets (skip / prior
# sets). ~4× faster than the std SipHash on small keys like SocketAddr.
rustc-hash = "1.1"
# v0.15.10 native SSL recon: direct openssl bindings. `vendored` feature
# builds OpenSSL from source statically — same posture as reqwest's
# native-tls-vendored — so macOS / Windows CI runners don't need system
# libssl-dev installed (v0.15.9 release CI failed without this). Lenient
# cert parsing matches the rest of the toolchain (legacy IoT/Cisco
# quirks accepted). Provides peer_certificate(), subject_alt_names(),
# issuer_name() — no separate X.509 parser crate needed.
openssl = { version = "0.10", features = ["vendored"] }
# Pure-Rust async DNS resolver. Used by the v0.14.0 domain/subdomain
# scanning feature to resolve hostnames → A/AAAA records in parallel
# with predictable per-query timeouts. Connects directly to Cloudflare
# 1.1.1.1 + Google 8.8.8.8 upstreams instead of the system resolver.
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime", "system-config"] }
# futures::stream::FuturesUnordered for bounded-concurrency DNS fan-out.
futures = { version = "0.3", default-features = false, features = ["std"] }

# Unix-only: setrlimit(RLIMIT_NOFILE) to raise the FD soft limit for large scans.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
